Update openapi definition
