# openApi/oapiServer.gen.go
@@ -1,6 +1,6 @@
 // Package Openapi provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.8.3 DO NOT EDIT.
 package Openapi
 
 import (
@@ -17,9 +17,11 @@ const (
 	App_idScopes = "app_id.Scopes"
 )
 
+// EventId defines model for eventId.
+type EventId int
+
 // GetEventsParams defines parameters for GetEvents.
 type GetEventsParams struct {
-
 	// if given only events of this year are returned
 	Year *int `json:"year,omitempty"`
 }
@@ -29,7 +31,6 @@ type PostEventsJSONBody externalRef0.Events
 
 // GetLocationsParams defines parameters for GetLocations.
 type GetLocationsParams struct {
-
 	// if given only locations of this overallLocation are returned
 	OverallLocation *externalRef0.OverallLocation `json:"overallLocation,omitempty"`
 }
@@ -46,8 +47,14 @@ type ServerInterface interface {
 	// (POST /events)
 	PostEvents(ctx echo.Context) error
 
+	// (DELETE /events/{id})
+	DeleteEventsId(ctx echo.Context, id EventId) error
+
 	// (GET /events/{id})
-	GetEventsId(ctx echo.Context, id int) error
+	GetEventsId(ctx echo.Context, id EventId) error
+
+	// (PUT /events/{id})
+	PutEventsId(ctx echo.Context, id EventId) error
 
 	// (GET /locations)
 	GetLocations(ctx echo.Context, params GetLocationsParams) error
@@ -90,11 +97,29 @@ func (w *ServerInterfaceWrapper) PostEvents(ctx echo.Context) error {
 	return err
 }
 
+// DeleteEventsId converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteEventsId(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id EventId
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	ctx.Set(App_idScopes, []string{""})
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.DeleteEventsId(ctx, id)
+	return err
+}
+
 // GetEventsId converts echo context to params.
 func (w *ServerInterfaceWrapper) GetEventsId(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "id" -------------
-	var id int
+	var id EventId
 
 	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
 	if err != nil {
@@ -103,6 +128,24 @@ func (w *ServerInterfaceWrapper) GetEventsId(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshalled arguments
 	err = w.Handler.GetEventsId(ctx, id)
+	return err
+}
+
+// PutEventsId converts echo context to params.
+func (w *ServerInterfaceWrapper) PutEventsId(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id EventId
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	ctx.Set(App_idScopes, []string{""})
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.PutEventsId(ctx, id)
 	return err
 }
 
@@ -170,7 +213,9 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 
 	router.GET(baseURL+"/events", wrapper.GetEvents)
 	router.POST(baseURL+"/events", wrapper.PostEvents)
+	router.DELETE(baseURL+"/events/:id", wrapper.DeleteEventsId)
 	router.GET(baseURL+"/events/:id", wrapper.GetEventsId)
+	router.PUT(baseURL+"/events/:id", wrapper.PutEventsId)
 	router.GET(baseURL+"/locations", wrapper.GetLocations)
 	router.GET(baseURL+"/locations/:id", wrapper.GetLocationsId)
 
